MDEV-10559: main.mysql_client_test_nonblock crashes in buildbot on 10.0

fix for async operations